release 1.1.3